[package]
name = "turing-display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "4.3"
clap = { version = "4.5", features = ["derive"] }
lodepng = "3.8"

[dependencies.turing-screen]
path = "../turing-rust"

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
